# nota

./: .gitignore  Cargo.toml  LICENSE  README.md  notaPRD.md
.github/workflows/: ci.yml
src/: context.rs  display.rs  main.rs  note.rs  search.rs  tui.rs
tests/: integration.rs
