[package]
name = "nota"
version = "0.1.0"
edition = "2021"
description = "A fast, zero-friction CLI note-taker that captures git context (repo, branch, staged files) automatically with every note."
authors = ["bbetre"]
license = "MIT"
repository = "https://github.com/bbetre/nota"
homepage = "https://github.com/bbetre/nota"
readme = "README.md"
keywords = ["cli", "notes", "git", "productivity", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nota"
path = "src/main.rs"

[dependencies]
clap          = { version = "4",    features = ["derive"] }
clap_complete = "4"
chrono        = { version = "0.4",  features = ["serde"] }
git2          = { version = "0.19", default-features = false }
serde         = { version = "1",    features = ["derive"] }
serde_yaml    = "0.9"
colored       = "2"
uuid          = { version = "1",    features = ["v4"] }
walkdir       = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip         = true
lto           = true
opt-level     = "z"
codegen-units = 1
